--- a/demo.html
+++ b/demo.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>git hub tutorial</p>
+    <p>git hub tutorial  day2 </p>
+    <p> Good Morning</p>
+    <p>Hello World</p>
 </body>
 </html>
