--- a/demo.html
+++ b/demo.html
@@ -8,6 +8,7 @@
 <body>
     <p>git hub tutorial  day2 </p>
     <p> Good Morning</p>
+    <p>This is devops</p>
     <p>Hello World</p>
 </body>
 </html>
